--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/archiver": "3.0.0",
+    "@types/glob": "7.1.1",
     "@types/jest": "24.0.13",
     "@types/mini-css-extract-plugin": "0.2.1",
     "@types/rimraf": "2.0.2",
@@ -75,6 +76,7 @@
     "version": "run-s test changelog authors && git add ."
   },
   "dependencies": {
-    "archiver": "3.0.0"
+    "archiver": "3.0.0",
+    "glob": "7.1.4"
   }
 }
