--- a/renovate.json
+++ b/renovate.json
@@ -1,13 +1,9 @@
 {
-  "extends": [
-    "config:base",
-    ":disableRateLimiting",
-    ":automergeMinor",
-    ":rebaseStalePrs"
-  ],
+  "extends": ["config:base", ":disableRateLimiting", ":rebaseStalePrs"],
   "packageRules": [
     {
       "depTypeList": ["devDependencies"],
+      "groupName": "dev dependencies",
       "rangeStrategy": "pin"
     },
     {
