--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "24.8.0",
     "mini-css-extract-plugin": "0.7.0",
     "npm-run-all": "4.1.5",
+    "prettier": "1.18.2",
     "rimraf": "2.6.3",
     "shelljs": "0.8.3",
     "shelljs-plugin-authors": "2.0.9",
