--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack": "^4.0.0"
   },
   "devDependencies": {
+    "@tanem/github-changelog-generator": "1.0.2",
     "@types/archiver": "3.0.0",
     "@types/glob": "7.1.1",
     "@types/jest": "24.0.15",
@@ -61,7 +62,7 @@
   "scripts": {
     "authors": "shelljs-authors > AUTHORS",
     "build": "run-s clean compile",
-    "changelog": "github_changelog_generator --no-issues --header-label \"# Changelog\" --future-release v$npm_package_version",
+    "changelog": "github-changelog-generator -f v$npm_package_version > CHANGELOG.md",
     "check:format": "prettier --list-different \"**/*.{js,ts}\"",
     "check:types": "tsc --noEmit",
     "clean": "run-p clean:*",
