--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "webpack": "^4.0.0"
   },
   "devDependencies": {
-    "@tanem/github-changelog-generator": "1.0.2",
     "@types/archiver": "3.0.0",
     "@types/glob": "7.1.1",
     "@types/jest": "24.0.15",
@@ -49,8 +48,7 @@
     "npm-run-all": "4.1.5",
     "prettier": "1.18.2",
     "rimraf": "2.6.3",
-    "shelljs": "0.8.3",
-    "shelljs-plugin-authors": "2.0.12",
+    "tanem-scripts": "2.0.0",
     "tar": "4.4.10",
     "ts-jest": "24.0.2",
     "typescript": "3.5.3",
@@ -60,9 +58,9 @@
     "yauzl": "2.10.0"
   },
   "scripts": {
-    "authors": "shelljs-authors > AUTHORS",
+    "authors": "tanem-scripts authors > AUTHORS",
     "build": "run-s clean compile",
-    "changelog": "github-changelog-generator -f v$npm_package_version > CHANGELOG.md",
+    "changelog": "tanem-scripts changelog -f v$npm_package_version > CHANGELOG.md",
     "check:format": "prettier --list-different \"**/*.{js,ts}\"",
     "check:types": "tsc --noEmit",
     "clean": "run-p clean:*",
