--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: node_js
 notifications:
   email: false
+if: type = pull_request
 matrix:
   include:
     - node_js: 8
       script:
         - npm t
-        - $(npm bin)/codecov
+        - npm run coverage
     - node_js: 10
       script:
         - npm t
