--- a/renovate.json
+++ b/renovate.json
@@ -2,22 +2,19 @@
   "extends": [
     "config:js-lib",
     ":rebaseStalePrs",
-    ":automergeMinor",
+    ":automergeAll",
     ":label(internal)",
     ":masterIssue"
   ],
   "lockFileMaintenance": {
     "enabled": true
   },
-  "stabilityDays": 3,
   "packageRules": [
-    {
-      "sourceUrlPrefixes": ["https://github.com/tanem/"],
-      "stabilityDays": 0
-    },
     {
       "depTypeList": ["dependencies"],
       "rangeStrategy": "bump"
     }
-  ]
+  ],
+  "prCreation": "not-pending",
+  "stabilityDays": 3
 }
