--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ matrix:
     - node_js: 8
       script:
         - npm t
-        - npm run coverage
+      after_success:
+        - bash <(curl -s https://codecov.io/bash)
     - node_js: 10
       script:
         - npm t
