Fix webpack at v4

--- a/renovate.json
+++ b/renovate.json
@@ -13,6 +13,10 @@
     {
       "depTypeList": ["dependencies"],
       "rangeStrategy": "bump"
+    },
+    {
+      "matchPackageNames": ["webpack"],
+      "allowedVersions": "< 5.0.0"
     }
   ],
   "prCreation": "not-pending",
