--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "css-loader": "5.2.6",
-    "del-cli": "3.0.1",
     "eslint": "7.28.0",
     "eslint-config-prettier": "8.3.0",
     "jest": "27.0.4",
@@ -47,6 +46,7 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.3.1",
     "rimraf": "3.0.2",
+    "shx": "0.3.3",
     "tanem-scripts": "6.0.19",
     "tar": "6.1.0",
     "ts-jest": "27.0.3",
@@ -61,9 +61,9 @@
     "check:format": "prettier --list-different \"**/*.{js,ts}\"",
     "check:types": "tsc --noEmit",
     "clean": "run-p clean:*",
-    "clean:coverage": "del coverage",
-    "clean:dist": "del dist",
-    "clean:test": "del test/fixtures/dist",
+    "clean:coverage": "shx rm -rf coverage",
+    "clean:dist": "shx rm -rf dist",
+    "clean:test": "shx rm -rf test/fixtures/dist",
     "compile": "tsc -p tsconfig.base.json",
     "format": "prettier --write \"**/*.{js,ts}\"",
     "lint": "eslint .",
