--- a/renovate.json
+++ b/renovate.json
@@ -27,6 +27,12 @@
         "mini-css-extract-plugin"
       ],
       "allowedVersions": "<= 1.4.0"
+    },
+    {
+      "matchPackageNames": [
+        "css-loader"
+      ],
+      "allowedVersions": "< 6.0.0"
     }
   ],
   "prCreation": "not-pending",
