Revert "Update Node.js to v18"
This reverts commit 739cbe56446d1db407183006feb407e043e44a60.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist"
   ],
   "engines": {
-    "node": "<19.0.0"
+    "node": ">=14.0.0 <18.0.0"
   },
   "homepage": "https://github.com/tanem/archiver-webpack-plugin",
   "bugs": "https://github.com/tanem/archiver-webpack-plugin/issues",
