Use readdir-glob instead of glob

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ['14', '16']
+        node: ['14', '16', '18']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
+          check-latest: true
       - run: npm ci
+      - run: echo "NODE_OPTIONS=--openssl-legacy-provider" >> $GITHUB_ENV
+        if: matrix.node == '18'
       - run: npm test
+      - run: echo "NODE_OPTIONS=" >> $GITHUB_ENV
+        if: matrix.node == '18'
       - uses: codecov/codecov-action@v3
         if: matrix.node == '14'
