--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,8 +3,8 @@
     "declaration": true,
     "esModuleInterop": true,
     "lib": ["es2017"],
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
