--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "webpack": "^4.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "9.9.1",
     "@types/archiver": "6.0.2",
+    "@types/eslint__js": "8.42.3",
     "@types/jest": "29.5.12",
     "@types/mini-css-extract-plugin": "1.4.0",
     "@types/readdir-glob": "1.1.5",
@@ -35,11 +37,9 @@
     "@types/webpack": "4.41.39",
     "@types/webpack-merge": "5.0.0",
     "@types/yauzl": "2.10.3",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
     "css-loader": "5.2.7",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
+    "eslint": "9.9.1",
+    "globals": "15.9.0",
     "jest": "29.7.0",
     "mini-css-extract-plugin": "1.4.0",
     "npm-run-all2": "6.2.2",
@@ -50,6 +50,7 @@
     "tar": "7.4.3",
     "ts-jest": "29.2.5",
     "typescript": "5.5.4",
+    "typescript-eslint": "8.3.0",
     "webpack": "4.47.0",
     "webpack-cli": "4.10.0",
     "webpack-merge": "6.0.1",
@@ -57,14 +58,14 @@
   },
   "scripts": {
     "build": "run-s clean compile",
-    "check:format": "prettier --list-different \"**/*.{js,ts}\"",
+    "check:format": "prettier --list-different \"**/*.{js,mjs,ts}\"",
     "check:types": "tsc --noEmit",
     "clean": "run-p clean:*",
     "clean:coverage": "shx rm -rf coverage",
     "clean:dist": "shx rm -rf dist",
     "clean:test": "shx rm -rf test/fixtures/dist",
     "compile": "tsc -p tsconfig.base.json",
-    "format": "prettier --write \"**/*.{js,ts}\"",
+    "format": "prettier --write \"**/*.{js,mjs,ts}\"",
     "lint": "eslint .",
     "release": "tanem-scripts release",
     "test": "NODE_OPTIONS=$(node -e \"console.log(process.versions.node.split('.')[0] > 17 ? '--openssl-legacy-provider' : '')\") run-s check:* lint build test:*",
